# Course_work_4

./: .gitignore  README.md  main.py  pyproject.toml
src/: hh_api.py  jsonsaver.py  saver_class.py  sjob_api.py  url_api_class.py  utils.py  vacancies.py
